# california_energy_architecture_2026

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  CODE_REVIEW.md  README.md  cloudbuild.yaml  dbt_project.yml  gitignore_gemini  profiles.yml.example  pyproject.toml
.github/agents/: Editor.agent.md
.github/workflows/: dbt-ci.yml
docs/: SERVICE_ACCOUNT_QUICK_REFERENCE.md  SERVICE_ACCOUNT_SETUP.md  architecture.md
macros/: normalize_string.sql
models/: schema.yml
models/marts/: mart_california_energy_capacity.sql
models/staging/: stg_california_energy_sources.sql
models/utility/: udf_normalize_string.sql
notebooks/: README.md
scripts/: run_dbt.sh
src/: __init__.py
src/california_energy_architecture_2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: settings.py
src/ingestion/: gcp_bigquery_client.py
src/preprocessing/: data_transforms.py
terraform/: README.md  main.tf  outputs.tf  service_account_keys.tf  variables.tf
tests/: test_sample.py
